--- a/index.html
+++ b/index.html
@@ -24,20 +24,23 @@
     </ul>
 </nav>
 
-<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
+<div class="center">
+    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
+    
+    <form action="something.php" method="post">
+            <ul class="searchbar">
+                <li><i class="fas fa-search"></i></li>
+                <li><input name="search" class="search"></li>
+                <li><i class="fas fa-microphone"></i></li>
+            </ul>
+        <div> 
+            <button class="button">Google Search</button>
+            <button class="button">I'm Feeling Lucky</button>
+        </div>
+    
+    </form>
+</div>
 
-<form action="something.php" method="post">
-    <section class="searchbar">
-        <ul>
-            <li><i class="fas fa-search"></i></li>
-            <li><input name="search"></li>
-            <li><i class="fas fa-microphone"></i></li>
-        </ul>
-    </section>
-    <button class="button">Search</button>
-    <button class="button">I'm Feeling Lucky</button>
-
-</form>
 
 
 </body>
