--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 
 <body>
-<nav>
-    <ul class="navbar">
-        <div class="nav-left">
-            <li >About</li>
-            <li >Store</li> 
-        </div>
-        <div class="nav-right">     
-            <li>Gmail</li>
-            <li>Images</li>
-            <li><i class="fas fa-th"></i></li>
-            <li>Sign Up</li>
-        </div>            
-    </ul>
-</nav>
+
+<ul class="navbar">
+    <div class="nav-left">
+        <li >About</li>
+        <li >Store</li> 
+    </div>
+    <div class="nav-right">     
+        <li>Gmail</li>
+        <li>Images</li>
+        <li><i class="fas fa-th"></i></li>
+        <li>Sign Up</li>
+    </div>            
+</ul>
+
 
 <div class="center">
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
@@ -41,6 +41,20 @@
     </form>
 </div>
 
+<footer>  
+    <ul class="footer">
+        <div class="footer-left">
+            <li>Advertising</li>
+            <li>Business</li>
+            <li>How Search works</li>
+        </div>
+        <div class="footer-right">
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>Settings</li>
+        </div>   
+    </ul>
+</footer>
 
 
 </body>
